--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ android.nonFinalResIds=false
 #kotlin.build.report.output=file
 #强制不增量
 #android.experimental.legacyTransform.forceNonIncremental=true
+javaVersion=17
