--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,5 @@ android.nonFinalResIds=false
 #强制不增量
 #android.experimental.legacyTransform.forceNonIncremental=true
 javaVersion=17
+compileSdk=34
+minSdk=23
