--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,9 @@ android.nonFinalResIds=false
 #kotlin.build.report.output=file
 #强制不增量
 #android.experimental.legacyTransform.forceNonIncremental=true
+systemProp.https.protocols=TLSv1.2,TLSv1.3
+#编译相关配置
 javaVersion=17
 compileSdk=34
 minSdk=23
+targetSdk=32
