--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,13 +20,13 @@ minSdk = "23"
 #*/
 targetSdk = "33"
 #AGP的版本
-agp = "8.1.1"
+agp = "8.0.1"
 material = "1.10.0"
 #AndroidX
 androidxAppcompat = "1.6.1"
-androidxActivityKtx = "1.7.2"
-androidxFragmentKtx = "1.6.1"
-androidxCollectionKtx = "1.2.0"
+androidxActivityKtx = "1.8.1"
+androidxFragmentKtx = "1.6.2"
+androidxCollectionKtx = "1.3.0"
 androidxLifecycle = "2.6.2"
 androidxVectordrawable = "1.1.0"
 androidxConstraintlayout = "2.1.4"
@@ -36,38 +36,38 @@ androidxCore = "1.12.0"
 androidxCoreSplashscreen = "1.0.1"
 androidxCoordinatorlayout = "1.2.0"
 androidxSwiperefreshlayout = "1.1.0"
-androidxRecyclerview = "1.3.1"
+androidxRecyclerview = "1.3.2"
 androidxViewpager2 = "1.1.0-beta02"
 androidxExifinterface = "1.3.6"
-androidxRoom = "2.5.2"
+androidxRoom = "2.6.0"
 androidxWebkit = "1.8.0"
 
 #kotlin
-kotlin = "1.9.10"
-ksp = "1.9.10-1.0.13"
+kotlin = "1.9.20"
+ksp = "1.9.20-1.0.14"
 kotlinxCoroutines = "1.7.3"
 kotlinxSerializationJson = "1.5.1"
 
 #三方库
-theRouter = "1.2.0-rc2"
-benManesVersion = "0.48.0"
+theRouter = "1.2.1"
+benManesVersion = "0.49.0"
 vanniktechPublish = "0.25.3"
-okhttp = "4.11.0"
+okhttp = "4.12.0"
 retrofit = "2.9.0"
 retrofitKotlinxSerializationJson = "1.0.0"
 lottie = "6.1.0"
 moshiKotlin = "1.15.0"
 utilcodex = "1.31.1"
-xxPermissions = "18.3"
+xxPermissions = "18.5"
 mmkv = "1.3.0"
 progressManager = "1.5.0"
 appStartFaster = "2.2.0"
 bannerViewPager = "3.5.12"
-jsoup = "1.16.1"
-brv = "1.5.2"
+jsoup = "1.16.2"
+brv = "1.5.5"
 flexboxLayout = "3.0.0"
 leakcanaryAndroid = "2.12"
-coil = "2.4.0"
+coil = "2.5.0"
 photoView = "2.3.0"
 materialDialog = "3.3.0"
 dateTimePicker = "0.6.3"
@@ -77,7 +77,7 @@ threetenabp = "1.4.6"
 alicloudAndroidApm = "1.1.2.0-open"
 alicloudAndroidBeacon = "1.0.8"
 alicloudAndroidHaAdapter = "1.1.6.2-open"
-alicloudAndroidHaCrashreporter = "1.4.0"
+alicloudAndroidHaCrashreporter = "1.6.0"
 alicloudAndroidPush = "3.8.7"
 alicloudAndroidTlog = "1.1.6.0-open"
 alicloudAndroidUt = "5.4.5"
