--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,7 +20,7 @@ minSdk = "23"
 #*/
 targetSdk = "33"
 #AGP的版本
-agp = "8.0.1"
+agp = "8.0.2"
 material = "1.10.0"
 #AndroidX
 androidxAppcompat = "1.6.1"
@@ -39,17 +39,17 @@ androidxSwiperefreshlayout = "1.1.0"
 androidxRecyclerview = "1.3.2"
 androidxViewpager2 = "1.1.0-beta02"
 androidxExifinterface = "1.3.6"
-androidxRoom = "2.6.0"
-androidxWebkit = "1.8.0"
+androidxRoom = "2.6.1"
+androidxWebkit = "1.9.0"
 
 #kotlin
-kotlin = "1.9.20"
+kotlin = "1.9.21"
 ksp = "1.9.20-1.0.14"
 kotlinxCoroutines = "1.7.3"
 kotlinxSerializationJson = "1.5.1"
 
 #三方库
-theRouter = "1.2.1"
+theRouter = "1.2.2-rc2"
 benManesVersion = "0.49.0"
 vanniktechPublish = "0.25.3"
 okhttp = "4.12.0"
