--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,7 +20,7 @@ minSdk = "23"
 #*/
 targetSdk = "33"
 #AGP的版本
-agp = "8.0.2"
+agp = "8.2.0"
 material = "1.11.0"
 #AndroidX
 androidxAppcompat = "1.6.1"
@@ -72,6 +72,7 @@ photoView = "2.3.0"
 materialDialog = "3.3.0"
 dateTimePicker = "0.6.3"
 threetenabp = "1.4.6"
+reactAndroid = "0.73.1"
 
 #阿里EMAS
 alicloudAndroidApm = "1.1.3.0-open"
@@ -107,6 +108,7 @@ xeonLocationGaode = "1.0.1"
 xeonLocationTencent = "1.0.1"
 xeonLocationBaidu = "1.0.1"
 xeonNetworkStatus = "1.0.1"
+activity = "1.8.2"
 
 [libraries]
 google-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
@@ -169,6 +171,10 @@ materialDialog-bottomsheets = { group = "com.afollestad.material-dialogs", name 
 materialDialog-lifecycle = { group = "com.afollestad.material-dialogs", name = "lifecycle", version.ref = "materialDialog" }
 dateTimePicker = { group = "com.github.loperSeven", name = "DateTimePicker", version.ref = "dateTimePicker" }
 
+react-android = { module = "com.facebook.react:react-android", version.ref = "reactAndroid" }
+react-hermes-android = { module = "com.facebook.react:hermes-android", version.ref = "reactAndroid" }
+
+
 #我自己的开源库
 xeonyu-bsdiff = { group = "com.xeonyu", name = "bsdiff", version.ref = "xeonBsDiff" }
 xeonyu-zxing = { group = "com.github.yuzhiqiang1993", name = "zxing", version.ref = "xeonZxing" }
@@ -222,6 +228,7 @@ androidx-room-runtime = { group = "androidx.room", name = "room-runtime", versio
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
+androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 
 
 [bundles]
