--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,9 +8,9 @@ compileSdk = "34"
 
 #/**
 #* Min sdk version
-#* App支持的最低版本 Android 6.0
+#* App支持的最低版本
 #*/
-minSdk = "23"
+minSdk = "24"
 
 #/**
 #* Target sdk version
@@ -98,9 +98,9 @@ xeonZxing = "2.2.9"
 xeonCordovaWebContainer = "1.0.5"
 xeonCordovaLib = "12.0.2"
 xeonBsDiff = "1.0.4"
-xeonLogger = "1.0.4"
-xeonApplication = "1.0.3"
-xeonCoroutine = "1.0.0"
+xeonLogger = "1.0.5-SNAPSHOT"
+xeonApplication = "1.0.4"
+xeonCoroutine = "1.0.3-SNAPSHOT"
 xeonMMKV = "1.0.0"
 xeonBinding = "1.0.0"
 xeonLocationManager = "1.0.1"
