--- a/gradle.properties
+++ b/gradle.properties
@@ -26,4 +26,5 @@ systemProp.https.protocols=TLSv1.2,TLSv1.3
 javaVersion=17
 compileSdk=34
 minSdk=23
-targetSdk=32
+targetSdk=33
+arsers.DocumentBuilderFactory=com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl
