--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -49,7 +49,7 @@ kotlinxCoroutines = "1.7.3"
 kotlinxSerializationJson = "1.5.1"
 
 #三方库
-theRouter = "1.2.2-rc9"
+theRouter = "1.2.2"
 benManesVersion = "0.51.0"
 vanniktechPublish = "0.25.3"
 okhttp = "4.12.0"
@@ -72,7 +72,7 @@ photoView = "2.3.0"
 materialDialog = "3.3.0"
 dateTimePicker = "0.6.3"
 threetenabp = "1.4.6"
-reactAndroid = "0.73.1"
+reactAndroid = "0.73.6"
 
 #阿里EMAS
 alicloudAndroidApm = "1.1.3.0-open"
@@ -89,13 +89,13 @@ androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 
 #高德map
-gaodeLocation = "6.4.2"
+gaodeLocation = "6.4.3"
 
 #我的开源库
 xeonBuildManager = "0.0.7"
 xeonDependencyManager = "1.0.1"
 xeonZxing = "2.2.9"
-xeonCordovaWebContainer = "1.0.5"
+xeonCordovaWebContainer = "1.0.6"
 xeonCordovaLib = "12.0.2"
 xeonBsDiff = "1.0.4"
 xeonLogger = "1.0.5"
