--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -XX:+UseParallelGC
 #自定把依赖的support库转成AndroidX
 android.enableJetifier=true
 android.useAndroidX=true
@@ -6,6 +6,16 @@ authToken=jp_45koepdran5gsmk15cdvtf3lhc
 kotlin.code.style=official
 android.injected.testOnly=false
 bytex.ASM_API=ASM9
+#开启并行编译，gradle默认是串行编译，开启并行编译可以提高编译速度
+org.gradle.parallel=true
+#开启守护进程，gradle可以更好的缓存构建信息，而且运行在后台，不用每次构建都去初始化然后再启动JVM了
+org.gradle.daemon=true
+#开启配置缓存,如果构建过程中没有修改配置文件，那么下次构建时会直接使用缓存的配置信息，而不用重新解析配置文件
+org.gradle.configuration.cache=true
+#开启构建缓存，可以缓存编译过程中的一些中间文件，下次构建时可以直接使用缓存的中间文件，而不用重新编译
+org.gradle.caching=true
+
+
 # configuration cache  可提升编译速度 但会对一些未适配的三方插件有影响
 org.gradle.unsafe.configuration-cache=false
 org.gradle.unsafe.configuration-cache-problems=warn
