--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ compileSdk = "34"
 #* Min sdk version
 #* App支持的最低版本
 #*/
+
 minSdk = "24"
 
 #/**
@@ -24,7 +25,7 @@ agp = "8.3.1"
 material = "1.11.0"
 #AndroidX
 androidxAppcompat = "1.6.1"
-androidxActivityKtx = "1.8.2"
+androidxActivityKtx = "1.9.0"
 androidxFragmentKtx = "1.6.2"
 androidxCollectionKtx = "1.4.0"
 androidxLifecycle = "2.7.0"
@@ -32,33 +33,33 @@ androidxVectordrawable = "1.1.0"
 androidxConstraintlayout = "2.1.4"
 androidxAnnotation = "1.7.1"
 androidxMultidex = "2.0.1"
-androidxCore = "1.12.0"
+androidxCore = "1.13.0"
 androidxCoreSplashscreen = "1.0.1"
 androidxCoordinatorlayout = "1.2.0"
 androidxSwiperefreshlayout = "1.1.0"
 androidxRecyclerview = "1.3.2"
-androidxViewpager2 = "1.1.0-beta02"
+androidxViewpager2 = "1.0.0"
 androidxExifinterface = "1.3.7"
 androidxRoom = "2.6.1"
 androidxWebkit = "1.10.0"
 
 #kotlin
 kotlin = "1.9.23"
-ksp = "1.9.23-1.0.19"
+ksp = "1.9.23-1.0.20"
 kotlinxCoroutines = "1.7.3"
 kotlinxSerializationJson = "1.5.1"
 
 #三方库
 theRouter = "1.2.2"
 benManesVersion = "0.51.0"
+toaster = "12.6"
 vanniktechPublish = "0.28.0"
 okhttp = "4.12.0"
-retrofit = "2.9.0"
+retrofit = "2.11.0"
 retrofitKotlinxSerializationJson = "1.0.0"
 lottie = "6.4.0"
 moshiKotlin = "1.15.1"
-utilcodex = "1.31.1"
-xxPermissions = "18.6"
+xxPermissions = "18.63"
 mmkv = "1.3.0"
 progressManager = "1.5.0"
 appStartFaster = "2.2.0"
@@ -66,21 +67,22 @@ bannerViewPager = "3.5.12"
 jsoup = "1.17.2"
 brv = "1.5.8"
 flexboxLayout = "3.0.0"
-leakcanaryAndroid = "2.13"
+leakcanaryAndroid = "2.14"
 coil = "2.6.0"
 photoView = "2.3.0"
 materialDialog = "3.3.0"
 dateTimePicker = "0.6.3"
-threetenabp = "1.4.6"
+threetenabp = "1.4.7"
 reactAndroid = "0.73.6"
+fileCore = "3.9.8@aar"
 
 #阿里EMAS
 alicloudAndroidApm = "1.1.3.0-open"
 alicloudAndroidBeacon = "1.0.8"
-alicloudAndroidHaAdapter = "1.2.3.0-open"
-alicloudAndroidHaCrashreporter = "1.8.0"
+alicloudAndroidHaAdapter = "1.2.4.0-open"
+alicloudAndroidHaCrashreporter = "1.9.0"
 alicloudAndroidPush = "3.8.8.1"
-alicloudAndroidTlog = "1.1.7.0-open"
+alicloudAndroidTlog = "1.1.8.0-open"
 alicloudAndroidUt = "5.4.5"
 alicloudAndroidUtdid = "2.6.0"
 alicloudAndroidUtils = "2.0.0"
@@ -99,7 +101,7 @@ xeonCordovaWebContainer = "1.0.6"
 xeonCordovaLib = "12.0.2"
 xeonBsDiff = "1.0.4"
 xeonLogger = "1.0.5"
-xeonApplication = "1.0.6"
+xeonApplication = "1.0.7-SNAPSHOT"
 xeonCoroutine = "1.0.3"
 xeonMMKV = "1.0.0"
 xeonBinding = "1.0.0"
@@ -110,10 +112,14 @@ xeonLocationBaidu = "1.0.1"
 xeonNetworkStatus = "1.0.1"
 xeonFloatView = "1.0.1"
 
-activity = "1.8.2"
+activity = "1.9.0"
+playServicesAdsIdentifier = "18.0.1"
 
 [libraries]
-google-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+file-compressor = { group = "com.github.javakam", name = "file.compressor", version.ref = "fileCore" }
+file-core = { group = "com.github.javakam", name = "file.core", version.ref = "fileCore" }
+file-selector = { group = "com.github.javakam", name = "file.selector", version.ref = "fileCore" }
+
 #androidX
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidxAppcompat" }
 androidx-activity-ktx = { group = "androidx.activity", name = "activity-ktx", version.ref = "androidxActivityKtx" }
@@ -135,7 +141,7 @@ androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview"
 androidx-viewpager2 = { group = "androidx.viewpager2", name = "viewpager2", version.ref = "androidxViewpager2" }
 androidx-exifinterface = { group = "androidx.exifinterface", name = "exifinterface", version.ref = "androidxExifinterface" }
 androidx-webkit = { group = "androidx.webkit", name = "webkit", version.ref = "androidxWebkit" }
-
+google-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 #kotlin
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlin" }
 kotlin-stdlib-jdk8 = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk8", version.ref = "kotlin" }
@@ -152,7 +158,7 @@ retrofit-converter-moshi = { group = "com.squareup.retrofit2", name = "converter
 retrofit-kotlin-serialization = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version.ref = "retrofitKotlinxSerializationJson" }
 lottie = { group = "com.airbnb.android", name = "lottie", version.ref = "lottie" }
 threetenabp = { module = "com.jakewharton.threetenabp:threetenabp", version.ref = "threetenabp" }
-utilcodex = { group = "com.blankj", name = "utilcodex", version.ref = "utilcodex" }
+toaster = { module = "com.github.getActivity:Toaster", version.ref = "toaster" }
 xxPermissions = { group = "com.github.getActivity", name = "XXPermissions", version.ref = "xxPermissions" }
 mmkv = { group = "com.tencent", name = "mmkv", version.ref = "mmkv" }
 moshiKotlin = { group = "com.squareup.moshi", name = "moshi-kotlin", version.ref = "moshiKotlin" }
@@ -232,6 +238,7 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
+play-services-ads-identifier = { group = "com.google.android.gms", name = "play-services-ads-identifier", version.ref = "playServicesAdsIdentifier" }
 
 
 [bundles]
