--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@
 #* Compile sdk version
 #* 按照指定sdk版本进行编译  不影响实际运行  尽量写最新的，最好跟targetsdkversion版本保持一致
 #*/
+
 compileSdk = "34"
 
 #/**
@@ -42,6 +43,12 @@ androidxViewpager2 = "1.0.0"
 androidxExifinterface = "1.3.7"
 androidxRoom = "2.6.1"
 androidxWebkit = "1.10.0"
+
+activity = "1.9.0"
+playServicesAdsIdentifier = "18.0.1"
+
+activityCompose = "1.9.0"
+androidxComposeBomVersion = "2024.05.00"
 
 #kotlin
 kotlin = "1.9.23"
@@ -91,16 +98,16 @@ androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 
 #高德map
-gaodeLocation = "6.4.3"
+gaodeLocation = "6.4.5"
 
 #我的开源库
 xeonBuildManager = "0.0.7"
 xeonDependencyManager = "1.0.1"
 xeonZxing = "2.2.9"
-xeonCordovaWebContainer = "1.0.6"
+xeonCordovaWebContainer = "1.0.7"
 xeonCordovaLib = "12.0.2"
 xeonBsDiff = "1.0.4"
-xeonLogger = "1.0.6"
+xeonLogger = "1.0.8"
 xeonApplication = "1.0.7"
 xeonCoroutine = "1.0.4"
 xeonMMKV = "1.0.1"
@@ -110,10 +117,9 @@ xeonLocationGaode = "1.0.1"
 xeonLocationTencent = "1.0.1"
 xeonLocationBaidu = "1.0.1"
 xeonNetworkStatus = "1.0.1"
-xeonFloatView = "1.0.2"
+xeonFloatView = "1.0.3"
 
-activity = "1.9.0"
-playServicesAdsIdentifier = "18.0.1"
+
 
 [libraries]
 file-compressor = { group = "com.github.javakam", name = "file.compressor", version.ref = "fileCore" }
@@ -147,12 +153,44 @@ play-services-ads-identifier = { group = "com.google.android.gms", name = "play-
 
 #kotlin
 kotlin-bom = { group = "org.jetbrains.kotlin", name = "kotlin-bom", version.ref = "kotlin" }
-kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlin" }
-kotlin-stdlibjdk8 = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk8", version.ref = "kotlin" }
+kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib" }
+kotlin-stdlibjdk8 = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk8" }
+
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 
+
+#compose
+androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
+
+#BOM 是 "Bill of Materials" 的缩写，这个依赖是一个 BOM（元数据文件），用于统一管理 Jetpack Compose 相关库的版本。它允许你在项目中使用统一的版本，而无需为每个库指定单独的版本号。
+#也就是说只要是以androidx.compose开头的库，都可以使用composeBom这个版本号
+androidx-compose-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "androidxComposeBomVersion" }
+#runtime
+androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
+#基础库，如Size、Padding,modifier修饰符 等
+androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
+#material组件库，如下拉刷新
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
+#ui组件库，如Button、Text等
+androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
+#这个库提供了用于在 Jetpack Compose 中进行图形处理的工具和类。它包含了一些用于绘制图形、处理颜色、渐变等功能的工具
+androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
+#动画库
+androidx-compose-animation = { group = "androidx.compose.animation", name = "animation" }
+#LiveData支持
+androidx-compose-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata" }
+#viewmodel支持
+androidx-compose-runtime-viewmodel = { group = "androidx.compose.runtime", name = "runtime-viewmodel" }
+#as预览
+androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+
+
+#material icons
+androidx-compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
+androidx-compose-material-icons-core = { group = "androidx.compose.material", name = "material-icons-core" }
 
 #三方库
 okhttp-core = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
@@ -241,10 +279,18 @@ androidx-room-runtime = { group = "androidx.room", name = "room-runtime", versio
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
+androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 
 
 [bundles]
 room = ["androidx-room-ktx", "androidx-room-runtime"]
+kotlin = ["kotlin-stdlib", "kotlin-stdlibjdk8"]
+compose = ["androidx-compose-foundation", "androidx-compose-material3",
+    "androidx-compose-ui", "androidx-ui-graphics", "androidx-compose-animation",
+    "androidx-compose-ui-tooling", "androidx-compose-ui-tooling-preview",
+    "androidx-compose-runtime", "androidx-activity-compose",
+    "androidx-compose-material-icons-extended", "androidx-compose-material-icons-core"]
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
