--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,38 +23,38 @@ minSdk = "24"
 targetSdk = "33"
 #AGP的版本
 agp = "8.3.2"
-material = "1.11.0"
+material = "1.12.0"
 #AndroidX
-androidxAppcompat = "1.6.1"
+androidxAppcompat = "1.7.0"
 androidxActivityKtx = "1.9.0"
 androidxFragmentKtx = "1.6.2"
 androidxCollectionKtx = "1.4.0"
-androidxLifecycle = "2.7.0"
-androidxVectordrawable = "1.1.0"
+androidxLifecycle = "2.8.1"
+androidxVectordrawable = "1.2.0"
 androidxConstraintlayout = "2.1.4"
-androidxAnnotation = "1.7.1"
+androidxAnnotation = "1.8.0"
 androidxMultidex = "2.0.1"
-androidxCore = "1.13.0"
+androidxCore = "1.13.1"
 androidxCoreSplashscreen = "1.0.1"
 androidxCoordinatorlayout = "1.2.0"
 androidxSwiperefreshlayout = "1.1.0"
 androidxRecyclerview = "1.3.2"
-androidxViewpager2 = "1.0.0"
+androidxViewpager2 = "1.1.0"
 androidxExifinterface = "1.3.7"
 androidxRoom = "2.6.1"
 androidxWebkit = "1.10.0"
 
 activity = "1.9.0"
-playServicesAdsIdentifier = "18.0.1"
+playServicesAdsIdentifier = "18.1.0"
 
 activityCompose = "1.9.0"
 androidxComposeBomVersion = "2024.05.00"
 
 #kotlin
-kotlin = "1.9.23"
-ksp = "1.9.23-1.0.20"
-kotlinxCoroutines = "1.7.3"
-kotlinxSerializationJson = "1.5.1"
+kotlin = "2.0.0"
+ksp = "2.0.0-1.0.21"
+kotlinxCoroutines = "1.8.0"
+kotlinxSerializationJson = "1.6.3"
 
 #三方库
 theRouter = "1.2.2"
@@ -64,7 +64,7 @@ vanniktechPublish = "0.28.0"
 okhttp = "4.12.0"
 retrofit = "2.11.0"
 retrofitKotlinxSerializationJson = "1.0.0"
-lottie = "6.4.0"
+lottie = "6.4.1"
 moshiKotlin = "1.15.1"
 xxPermissions = "18.63"
 mmkv = "1.3.0"
@@ -306,6 +306,7 @@ compose = [
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
