update:sdk 版本升级

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,32 +1,30 @@
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -XX:+UseParallelGC
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
 #自定把依赖的support库转成AndroidX
 android.enableJetifier=true
 android.useAndroidX=true
-authToken=jp_45koepdran5gsmk15cdvtf3lhc
 kotlin.code.style=official
+# 用来控制 APK 的 android:testOnly 属性，确保测试版应用可以在非测试设备上安装
 android.injected.testOnly=false
-bytex.ASM_API=ASM9
+#bytex.ASM_API=ASM9
 #开启并行编译，gradle默认是串行编译，开启并行编译可以提高编译速度
-org.gradle.parallel=true
+#org.gradle.parallel=true
 #开启守护进程，gradle可以更好的缓存构建信息，而且运行在后台，不用每次构建都去初始化然后再启动JVM了
-org.gradle.daemon=true
+#org.gradle.daemon=true
 #开启配置缓存,如果构建过程中没有修改配置文件，那么下次构建时会直接使用缓存的配置信息，而不用重新解析配置文件
-org.gradle.configuration.cache=true
+#org.gradle.configuration.cache=true
 #开启构建缓存，可以缓存编译过程中的一些中间文件，下次构建时可以直接使用缓存的中间文件，而不用重新编译
-org.gradle.caching=true
-
-
+#org.gradle.caching=true
 # configuration cache  可提升编译速度 但会对一些未适配的三方插件有影响
-org.gradle.unsafe.configuration-cache=false
-org.gradle.unsafe.configuration-cache-problems=warn
+#org.gradle.unsafe.configuration-cache=true
+#org.gradle.unsafe.configuration-cache-problems=warn
 #关闭R文件传递
 #关闭R文件传递可以通过编译避免的方式获得更快的编译速度
 #关闭R文件传递有助于确保每个模块的R类仅包含对其自身资源的引用，避免无意中引用其他模块资源，明确模块边界。
 #关闭R文件传递也可以减少很大一部分包体积与dex数量
 android.nonTransitiveRClass=true
 #开启跨模块增量编译
-kotlin.incremental.useClasspathSnapshot=true
-android.nonFinalResIds=false
+#kotlin.incremental.useClasspathSnapshot=true
+#android.nonFinalResIds=false
 # 可选，启用构建报告
 #kotlin.build.report.output=file
 #强制不增量
@@ -37,4 +35,4 @@ javaVersion=17
 compileSdk=34
 minSdk=23
 targetSdk=33
-arsers.DocumentBuilderFactory=com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl
+#arsers.DocumentBuilderFactory=com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl
