update:更新依赖管理插件

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -104,7 +104,7 @@ gaodeLocation = "6.4.5"
 
 #我的开源库
 xeonBuildManager = "0.0.7"
-xeonDependencyManager = "1.0.1"
+xeonDependencyManager = "1.0.2"
 xeonZxing = "2.2.9"
 xeonCordovaWebContainer = "1.0.7"
 xeonCordovaLib = "12.0.2"
@@ -324,6 +324,6 @@ vanniktechPublish = { id = "com.vanniktech.maven.publish", version.ref = "vannik
 # 自定义的插件
 xeonyu-application = { id = "com.xeonyu.plugin.application", version.ref = "xeonBuildManager" }
 xeonyu-library = { id = "com.xeonyu.plugin.library", version.ref = "xeonBuildManager" }
-xeonyu-dependencyManager = { id = "com.xeonyu.plugin.dependencyManager", version.ref = "xeonDependencyManager" }
+xeonyu-dependencyManager = { id = "com.xeonyu.dependency-manager", version.ref = "xeonDependencyManager" }
 #xeonyu-room = { id = "com.xeonyu.plugin.room", version.ref = "buildManagerVersion" }
 #xeonyu-therouter = { id = "com.xeonyu.plugin.therouter", version.ref = "buildManagerVersion" }
